--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ body {
 }
 .choices {
     font-size: 15px;
-    margin-right: 30%;
+    margin-left: 15%;
+    padding: 20px;
 }
 footer {
     font-size: 10px;
